src/assets/css/styles.css
/* ... */
.coming-soon__box {
  @apply rounded-[22px] p-6 gap-6 flex items-center relative shadow-default;
  background: linear-gradient(
    131.09deg,
    rgba(47, 47, 47, 0.4) 8.8%,
    rgba(103, 100, 98, 0.11) 88.99%
  );
}

.coming-soon__box::before {
  content: "";
  @apply absolute rounded-2xl inset-0 p-[1.5px] pointer-events-none shadow-default;
  background: linear-gradient(
    131.93deg,
    rgba(245, 142, 142, 0.6) 11.72%,
    rgba(246, 162, 148, 0.23) 38.41%,
    rgba(248, 190, 157, 0.23) 66.36%,
    rgba(249, 212, 164, 0.6) 91.8%
  );
  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
  mask-composite: exclude;
}

.coming-soon__box p:first-child {
  @apply w-[117px] h-4;
  background: linear-gradient(
    90.97deg,
    rgba(217, 217, 217, 0.39) -4.93%,
    rgba(217, 217, 217, 0) 95.33%
  );
}
.coming-soon__box-line {
  @apply w-[38px] h-4 mt-1;
  background: linear-gradient(
    90.97deg,
    rgba(217, 217, 217, 0.39) -4.93%,
    rgba(217, 217, 217, 0) 95.33%
  );
}

.coming-soon__box-left {
  @apply rounded-lg w-[60px] h-[60px];
  background: linear-gradient(
    90.97deg,
    rgba(217, 217, 217, 0.39) -4.93%,
    rgba(217, 217, 217, 0) 95.33%
  );
}

.services-running::after {
  content: "";
  @apply absolute inset-0 rounded-[12px] rotate-180 shadow-default pointer-events-none;
  background: linear-gradient(
    312.93deg,
    rgba(245, 142, 142, 0.46) -4.82%,
    rgba(245, 142, 142, 0.61) 8.19%,
    rgba(245, 142, 142, 0.08) 61.08%
  );
}
.services-running .dashboard-bottom__card-box {
  @apply z-[1];
}

.search-filter {
  @apply lg:h-[50px];
}
.search-filter > input {
  @apply rounded-sm w-full py-2 text-manatee px-12 focus:shadow-none focus:outline-none;
  background-color: rgba(77, 77, 79, 0.22);
}
.dropdown-menu {
  @apply bg-darkjunglegreen border py-4 pl-6 pr-3 invisible rounded-lg opacity-0 top-[50px] right-0 w-[244px] absolute translate-y-[-20px];
  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3);
  border-color: rgba(149, 151, 163, 0.5);
  transition: opacity 0.4s ease, transform 0.4s ease, visibility 0.4s;
}
.dropdown-menu.dropdown-active {
  @apply opacity-100 visible translate-y-0 z-[11];
}
.dropdown-menu li {
  @apply text-spanishgray flex cursor-pointer;
}
.dropdown-menu input[type="checkbox"] {
  @apply w-4 h-4 border border-lavendergray;
}
.dropdown-menu input[type="checked"] {
  @apply bg-tulip;
}
.dropdown-menu li label {
  @apply flex items-center cursor-pointer w-full pb-4 text-sm;
}
.dropdown-menu li label span {
  @apply font-proximaNova-regular select-none;
}
.dropdown-menu li input[type="checkbox"] {
  @apply border mr-4 border-lavendergray w-5 h-5 appearance-none cursor-pointer rounded-sm;
}
.dropdown-menu li input:checked {
  @apply relative border-transparent bg-tulip;
}
.dropdown-menu li input:checked::before {
  content: "\2713";
  @apply absolute top-[-1px] right-[1px] text-[1.1rem] text-darkcharcoal;
}

.warning-modal {
  @apply top-0 fixed left-0 z-[11] overflow-y-auto overflow-x-hidden h-full w-full flex items-center max-md:p-4;
}
.warning-modal::before {
  content: "";
  @apply fixed top-0 left-0 z-[1] w-screen h-screen backdrop-blur-[20px] shadow-default;
  background: linear-gradient(
    131.09deg,
    rgba(29, 29, 27, 0.49) 8.8%,
    rgba(29, 29, 27, 0.76) 88.99%
  );
}
.warning-modal__content {
  @apply p-6 mx-auto relative rounded-2xl z-[11] md:bg-[#26262A] md:max-w-[675px] max-md:max-w-full text-brightgray max-md:h-full max-md:flex max-md:flex-col;
}
.warning-modal__content .hr,
.warning-modal__content.gradient-border::after {
  @apply max-md:hidden;
}

.documentation-modal--main .warning-modal__content .hr,
.documentation-modal--main .warning-modal__content.gradient-border::after {
  @apply max-md:block;
}

.warning-modal__footer {
  @apply flex items-center md:gap-8 gap-[18px] max-md:flex-col;
}

.warning-modal__footer button {
  @apply max-md:max-w-[250px];
}

.hr {
  @apply border-t -mx-6 pt-6 opacity-50;
  border-color: rgba(237, 237, 237, 0.34);
}
.polygon-shape {
  background: url("../images/polygon-shape.svg") no-repeat;
  @apply w-[90px] h-[60px] max-md:h-9 max-md:w-[65px] flex justify-center items-center bg-contain max-md:!bg-[12px] bg-center;
}
.polygon-shape svg {
  @apply w-6 h-6 md:mt-[14px] mt-2 max-md:h-4 max-md:w-4;
}
svg.warning-icon {
  @apply w-8 h-8 max-md:h-6 max-md:w-6 mx-auto;
}
.warning-icon path {
  @apply stroke-white;
}
.dashboard-bottom__card-warning path:first-child {
  @apply stroke-none;
}

.settings-card h3 {
  @apply text-brightgray text-lg mb-7;
}
.settings-card__border {
  @apply border-b-2 opacity-50;
  border-color: rgba(219, 213, 213, 0.2);
}

.progress {
  @apply border w-full overflow-hidden rounded-[2px];
}
.progress-container {
  @apply h-5 bg-lightsalmonpink;
  transform: skew(-20deg) translateX(-10px);
}
.settings-card li {
  @apply w-full;
}
.settings-card li span {
  @apply text-brightgray font-semibold md:text-[13px] text-[10px] pb-3 gap-3;
}

.form-control {
  background: rgba(77, 77, 79, 0.22);
  color: rgba(255, 255, 255, 0.8);
  @apply rounded-md py-3 px-5 w-full focus:!ring-0 focus:outline-none;
}
.form-control::placeholder,
.select-control select {
  @apply text-sm;
  color: rgba(255, 255, 255, 0.6);
}

.form-label {
  @apply font-semibold text-sm text-white;
}
.form-control[disabled]::placeholder {
  @apply opacity-20;
}

.select-control {
  @apply w-full;
}
.select-control select {
  background: url("../images/down.svg") no-repeat 100% 50%;
  background-color: rgba(77, 77, 79, 0.22);
  background-position-x: 95%;
  @apply appearance-none h-full;
}
.topltip {
  @apply !text-[10px] !text-brightgray rounded-md;
}
.service-detail {
  @apply flex gap-4 max-lg:flex-wrap max-lg:gap-8;
}

.service-detail .card {
  @apply rounded-md shadow-default max-lg:w-full max-md:!bg-none max-md:px-0;
  background: linear-gradient(
    131.09deg,
    rgba(47, 47, 47, 0.4) 8.8%,
    rgba(103, 100, 98, 0.11) 88.99%
  );
}
.services-header {
  @apply relative;
}
/* ... */

